SUB-255: As a merchant I would like to use Authorize.Net to process my payments

--- a/view/frontend/web/template/payment/cc-form.html
+++ b/view/frontend/web/template/payment/cc-form.html
@@ -43,10 +43,9 @@
                 <button class="action primary checkout"
                         type="submit"
                         data-bind="
-                            click: placeOrder,
+                            click: placeOrderClick,
                             attr: {title: $t('Place Order')},
-                            css: {disabled: !isPlaceOrderActionAllowed()},
-                            enable: isActive()
+                            enable: isButtonActive()
                         "
                         disabled>
                     <span data-bind="text: $t('Place Order')"></span>
