--- a/view/adminhtml/templates/payment/script.phtml
+++ b/view/adminhtml/templates/payment/script.phtml
@@ -4,7 +4,7 @@
  * See TNW_LICENSE.txt for license details.
  */
 
-/** @var TNW\Stripe\Block\Payment $block */
+/** @var TNW\AuthorizeCim\Block\Payment $block */
 
 $code = $block->escapeHtml($block->getCode());
 ?>
